# gstat

./: .Rbuildignore  .gitignore  .travis.yml  404.html  CHANGES  DESCRIPTION  LICENSE-text.html  LICENSE-text.md  NAMESPACE  NEWS.md  README.md  authors.html  authors.md  cleanup  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
.github/workflows/: rcmdcheck.yml  tic.yml
R/: circEmbed.R  circEmbed.r  fit.lmc.R  fit.variogram.R  fit.variogram.gls.R  fit.variogram.reml.R  get.contr.R  gstat.R  gstat.cv.R  gstat.debug.R  gstat.formula.R  gstat.formula.predict.R  gstatOptions.R  hscat.R  image.data.frame.R  krige.R  krige.cv.R  krige0.R  krigeST.R  krigeTg.R  load.variogram.model.R  map.to.lev.R  ossfim.R  panel.pointPairs.R  parVgmArea.R  plot.gstatVariogram.R  plot.pointPairs.R  plot.variogramCloud.R  predict.gstat.R  print.gstat.R  print.variogram.R  print.variogramCloud.R  print.variogramModel.R  set.R  show.vgms.R  smenu.R  spplot.R  stVariogramModels.R  turningLayers.R  variogram.default.R  (+8 more)
attic/cmd/: ex02.cmd  ex03.cmd  ex03a.cmd  ex05.cmd  ex07.cmd  ex10.cmd  ex14.cmd  ex14a.cmd  ex17.cmd  id_pr  id_pr.aux.xml  locs.eas  makefile  map_diff  mask_map.tif  part_b.tif  sqrtdist.tif  x  zinc.eas  zincat1.eas
attic/standalone/: COPYING  ChangeLog  ChangeLog.cvs  README  aclocal.m4  configure  configure.ac  configure.in  makefile.in
attic/standalone/cmd/: ex01.cmd  ex04.cmd  ex06.cmd  ex08.cmd  ex09.cmd  ex11.cmd  ex12.cmd  ex13.cmd  ex15.cmd  ex16.cmd  grass.cmd  makefile  mask_v2.map  mdiff  part_a  part_a.tif  part_b  sqrtdist  zincat0.eas
attic/standalone/meschach/: .cvsignore  CHANGES  FILELIST  Makefile.pcr  aclocal.m4  chfactor.c  configure  configure.in  copy.c  dmacheps.c  err.c  err.h  fmacheps.c  hsehldr.c  init.c  ivecop.c  lufactor.c  machine.c  machine.h  machine.h.bcc  machine.hin  makefile  makefile.in  matop.c  matrix.h  matrixio.c  maxint.c  meminfo.c  meminfo.h  memory.c  memstat.c  norm.c  otherio.c  pxop.c  qrfactor.c  solve.c  sparse.c  sparse.h  sparse2.h  sparseio.c  (+8 more)
attic/standalone/meschach/MACHINES/Cray/: machine.h  makefile
attic/standalone/meschach/MACHINES/GCC/: makefile
attic/standalone/meschach/MACHINES/HP/: machine.hp
attic/standalone/meschach/MACHINES/Linux/: machine.h  makefile
attic/standalone/meschach/MACHINES/RS6000/: machine.c  machine.h  makefile
attic/standalone/meschach/MACHINES/SGI/: machine.h  makefile
attic/standalone/meschach/MACHINES/SPARC/: machine.gcc  makefile  makefile.gcc
attic/standalone/src/: .cvsignore  CHANGES  CREDITS  Makefile.pcr  block.c  config.bcc  config.h.bcc  config.hin  data.c  data.h  debug.h  defaults.h  defs.h  direct.c  direct.h  dumpdata.R  ext_dbase.c  ext_dbase.h  ext_dbasetest.h  fig.c  fig.h  fit.c  fit.h  gcdist.c  getest.c  getest.h  getopt.c  getopt.h  gls.c  glvars.c  glvars.h  gstat.c  lex.c  lex.h  lex.l  lm.c  lm.h  makefile.bcc  makefile.cw  makefile.in  (+65 more)
attic/tex/: char.sed  edges.tex  exam.awk  example.in  example.tex  gstat.aux  gstat.bbl  gstat.bib  gstat.blg  gstat.idx  gstat.ilg  gstat.ind  gstat.out  (+18 more)
data/: DE_RB_2005.rda  coalash.rda  fulmar.rda  jura.rda  meuse.all.rda  meuse.alt.rda  ncp.grid.rda  oxford.rda  pcb.rda  sic2004.rda  sic97.rda  tull.rda  vv.rda  walker.rda  wind.rda
demo/: 00Index  a2p.R  a2pinST.R  block.R  blue.R  cc.R  circEmbeddingMeuse.R  cokriging.R  comp_geoR.R  cosimulation.R  depend.R  examples.R  fulmar.R  grass.R  gstat3D.R  ikr.R  krige.R  lhs.R  line.R  lnsim.R  localKrigeST.R  pcb.R  pcb_sf.R  rep.R  sftime.R  sic2004.R  snow.R  stkrige-crossvalidation.R  stkrige-prediction.R  stkrige.R  ugsim.R  uisim.R  weight.R  wind.R  zonal.R
docs/: LICENSE-text.html  authors.html  index.html  pkgdown.yml
inst/: CITATION  ChangeLog  ChangeLog0  NEWS.Rd
man/: DE_RB_2005.Rd  coalash.Rd  estiStAni.Rd  extractPar.Rd  fit.StVariogram.Rd  fit.lmc.Rd  fit.variogram.Rd  fit.variogram.gls.Rd  fit.variogram.reml.Rd  fulmar.Rd  get.contr.Rd  gstat-internal.Rd  gstat.Rd  hscat.Rd  image.Rd  jura.Rd  krige.Rd  krige.cv.Rd  krigeST.Rd  krigeSTSimTB.Rd  krigeSimCE.Rd  krigeTg.Rd  map.to.lev.Rd  meuse.all.Rd  meuse.alt.Rd  ncp.grid.Rd  ossfim.Rd  oxford.Rd  pcb.Rd  plot.gstatVariogram.Rd  plot.pointPairs.Rd  plot.variogramCloud.Rd  predict.gstat.Rd  progress.Rd  show.vgms.Rd  sic2004.Rd  sic97.Rd  spplot.vcov.Rd  tull.Rd  variogram.Rd  (+11 more)
news/: index.html  index.md
reference/: DE_RB_2005.html  DE_RB_2005.md  coalash.html  coalash.md  estiStAni.html  estiStAni.md  extractPar.html  extractPar.md  fit.StVariogram.html  fit.StVariogram.md  fit.lmc.html  fit.lmc.md  fit.variogram.gls.html  fit.variogram.gls.md  fit.variogram.html  fit.variogram.md  fit.variogram.reml.html  fit.variogram.reml.md  fulmar.html  fulmar.md  get.contr.html  get.contr.md  gstat-internal.html  gstat-internal.md  gstat.html  gstat.md  hscat.html  hscat.md  image.html  image.md  index.html  index.md  jura.html  jura.md  krige.cv.html  krige.cv.md  krige.html  krige.md  krigeST.html  krigeST.md  (+64 more)
src/: Makevars  block.c  block.h  data.c  data.h  debug.h  defaults.h  defs.h  direct.c  fit.c  gcdist.c  gcdist.h  getest.c  gls.c  gls.h  glvars.c  glvars.h  init.c  lm.c  lm.h  mapio.c  msim.c  msim.h  mtrx.c  mtrx.h  nsearch.c  pqueue.c  pqueue.h  reml.c  reml.h  s.c  s.h  select.c  sem.c  sem.h  sim.c  sim.h  tags  userio.c  userio.h  (+8 more)
tests/: allier.R  allier.Rout.save  blockkr.R  blockkr.Rout.save  covtable.R  covtable.Rout.save  cv.R  cv.Rout.save  cv3d.R  cv3d.Rout.save  fit.R  fit.Rout.save  krige0.R  krige0.Rout.save  line.R  line.Rout.save  merge.R  merge.Rout.save  na.action.R  na.action.Rout.save  rings.R  rings.Rout.save  sim.R  sim.Rout.save  stars.R  stars.Rout.save  unproj.R  unproj.Rout.save  variogram.R  variogram.Rout.save  vdist.R  vdist.Rout.save  windst.R  windst.Rout.save
vignettes/: .install_extras  gstat.Rnw  gstat.Rout.save  prs.Rnw  prs.Rout.save  spatio-temporal-kriging-concordance.tex  spatio-temporal-kriging.Rnw  spatio-temporal-kriging.bib  spatio-temporal-kriging.tex  spatio-temporal-kriging.tex.aux  spatio-temporal-kriging_raw.tex  st.Rnw
(+135 files in other folders)
